<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:orientation="vertical"
    tools:context=".DriveMate">

    <TextView
        android:id="@+id/refuelBtn"
        style="@style/ActionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_refuel"
        app:drawableTint="@color/amber_900"
        app:drawableLeftCompat="@drawable/ic_refuel" />
    
    <TextView
        android:id="@+id/serviceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_service"
        style="@style/ActionItem"
        app:drawableTint="@color/amber_900"
        app:drawableLeftCompat="@drawable/ic_service" />


    <TextView
        android:id="@+id/expenseBtn"
        style="@style/ActionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_spend"
        app:drawableTint="@color/amber_900"
        app:drawableLeftCompat="@drawable/ic_spend" />

    <TextView
        android:id="@+id/reminderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_reminder"
        style="@style/ActionItem"
        app:drawableTint="@color/amber_900"
        app:drawableLeftCompat="@drawable/ic_remind" />

    
    <TextView
        android:id="@+id/closeBtn"
        style="@style/ActionItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/close"
        app:drawableTint="@color/red_A700"
        app:drawableLeftCompat="@drawable/ic_cancel" />

</LinearLayout>