<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/blue_grey_50"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:elevation="5dp"
    android:padding="12dp">

    <TextView
        android:id="@+id/note_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/note_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/note_content_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/this_can_be_note_content_that_can_be_long"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/note_timestamp_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:gravity="right"
        android:text="@string/note_date"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

</LinearLayout>