<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reportExpenseTitle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:gravity="start"
        android:text="@string/cost"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/my_primary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/total"
                android:gravity="center"/>

            <TextView
                android:id="@+id/totalExpenseCostTextView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/by_day"
                android:gravity="center"/>
            <TextView
                android:id="@+id/byDayExpenseCostTextView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/by_km"
                android:gravity="center"/>
            <TextView
                android:id="@+id/byKmExpenseCostTextView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:gravity="start"
        android:text="@string/charts"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/my_primary"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/expenseCostPerMonthChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue_grey_50" />
</LinearLayout>